@@ -8,6 +8,11 @@ Changes:
 
 Features:
 
+- "Switch XXLTearline on" by A. Ilchenko. If you set this, you can have a
+  tearline of up to 79 characters (instead of 35), and the Unix version will
+  print system information in the tearline. But be aware that this violates
+  FTSC rules, so using this is discouraged.
+
 Fixes:
 
 
